--- a/apps/flolo-page-ui/src/app/pages/events/event-details/event-details.component.html
+++ b/apps/flolo-page-ui/src/app/pages/events/event-details/event-details.component.html
@@ -1,3 +1,10 @@
-<p-card [header]="event.name" [subheader]="event.location">
-  <div style="width: 80%" [innerHTML]="event.description"></div>
-</p-card>
+<div class="event-details" *ngIf="event">
+  <p-card [header]="event.name" [subheader]="event.location">
+    <div [innerHTML]="event.description"></div>
+    <div style="padding-top: 10px;">
+      <button pButton pRipple type="button" label="Anmelden" icon="pi pi-check"
+              class="p-button-rounded p-button-warning"
+              [routerLink]="'/camps/checkout/' + event.id"></button>
+    </div>
+  </p-card>
+</div>
