--- a/apps/flolo-page-ui/src/app/shared/header/header.component.scss
+++ b/apps/flolo-page-ui/src/app/shared/header/header.component.scss
@@ -1,6 +1,18 @@
 header {
-  .logo img {
-    width: 5vw;
+  .logo {
+    img {
+      width: 5vw;
+    }
+
+    a {
+      color: var(--text-color);
+      cursor: pointer;
+      text-decoration: none;
+
+      &:hover {
+        color: var(--text-color-secondary);
+      }
+    }
   }
 
   .navigation {
