--- a/apps/flolo-page-ui/src/app/shared/header/header.component.html
+++ b/apps/flolo-page-ui/src/app/shared/header/header.component.html
@@ -1,8 +1,10 @@
 <header>
   <div class="p-grid">
     <div class="p-col-3 logo">
-      <img src="assets/logo.png" alt="logo" /><br />
-      Schnetzer / Petutschnig
+      <a routerLink="/">
+        <img src="assets/logo.png" alt="logo" /><br />
+        Schnetzer / Petutschnig
+      </a>
     </div>
 
     <div class="p-col-8 p-offset-1 navigation">
