--- a/apps/flolo-page-ui/src/app/shared/nav/nav.component.html
+++ b/apps/flolo-page-ui/src/app/shared/nav/nav.component.html
@@ -1,10 +1,7 @@
 <ul class="nav">
   <li>
-    <a routerLink="/">Home</a>
+    <a routerLink="/">Camps</a>
   </li>
-<!--  <li>-->
-<!--    <a routerLink="/camps">Camps</a>-->
-<!--  </li>-->
   <li>
     <a routerLink="/sponsors">Sponsors</a>
   </li>
