admin shell & sponsors administration

--- a/apps/flolo-page-admin/src/app/shared/shell/shell.component.html
+++ b/apps/flolo-page-admin/src/app/shared/shell/shell.component.html
@@ -1,4 +1,7 @@
 <div class="flpa-wrapper">
+  <div class="flpa-sidebar">
+    <flpa-sidebar></flpa-sidebar>
+  </div>
   <div class="flpa-main">
     <router-outlet></router-outlet>
   </div>
