--- a/apps/flolo-page-admin/src/app/pages/sponsors/sponsors-list/sponsors-list.component.html
+++ b/apps/flolo-page-admin/src/app/pages/sponsors/sponsors-list/sponsors-list.component.html
@@ -1,13 +1,49 @@
-<p-table [value]="sponsors">
-  <ng-template pTemplate="header">
-    <tr>
-      <th>Name</th>
-    </tr>
-  </ng-template>
+<div class="flpa-sponsors-list">
+  <p-card header="Sponsors" subheader="Liste der Sponsoren">
+    <div class="p-grid">
+      <div class="p-col-12">
+        <p-toolbar>
+          <div class="p-toolbar-group-left">
+            <button pButton pRipple type="button" label="Neu" icon="pi pi-plus"
+                    class="p-button-rounded p-button-success"
+                    routerLink="form"></button>
+          </div>
+        </p-toolbar>
+      </div>
 
-  <ng-template pTemplate="body" let-sponsor>
-    <tr>
-      <td>{{sponsor.name}}</td>
-    </tr>
-  </ng-template>
-</p-table>
+      <div class="p-col-12">
+        <p-table id="sponsors-table" [value]="sponsors">
+          <ng-template pTemplate="header">
+            <tr>
+              <th>Name</th>
+              <th>Logo</th>
+              <th></th>
+            </tr>
+          </ng-template>
+
+          <ng-template pTemplate="body" let-sponsor>
+            <tr>
+              <td>{{sponsor.name}}</td>
+              <td>
+                <img [src]="sponsor.image" style="width: 100%" />
+              </td>
+              <td>
+                <div class="p-d-flex p-jc-end">
+                  <button pButton pRipple type="button" label="" icon="pi pi-pencil"
+                          class="p-button-rounded p-button-warning p-mr-1"
+                          (click)="editSponsor(sponsor)"></button>
+                  <button pButton pRipple type="button" label="" icon="pi pi-trash"
+                          class="p-button-rounded p-button-danger"
+                          (click)="deleteSponsor(sponsor)"></button>
+                </div>
+              </td>
+            </tr>
+          </ng-template>
+        </p-table>
+      </div>
+    </div>
+  </p-card>
+</div>
+
+<p-confirmDialog [style]="{width: '100vw'}" [baseZIndex]="10000"
+                 rejectButtonStyleClass="p-button-text"></p-confirmDialog>
