--- a/apps/flolo-page-admin/src/styles.scss
+++ b/apps/flolo-page-admin/src/styles.scss
@@ -1,4 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+@import '~normalize.css/normalize.css';
+
 @import "../../../styles/style";
 
 @import "~primeicons/primeicons.css";
@@ -24,4 +26,6 @@ body {
   padding: 0;
   min-width: 100%;
   min-height: 100%;
+  background-color: var(--surface-d);
+  background-size: cover;
 }
