--- a/apps/flolo-page-admin/src/app/pages/sponsors/sponsors-form/sponsors-form.component.html
+++ b/apps/flolo-page-admin/src/app/pages/sponsors/sponsors-form/sponsors-form.component.html
@@ -1,4 +1,4 @@
-<div class="flpa-sponsors-list">
+<div class="flpa-sponsors-form">
   <p-card [header]="editMode ? 'Edit Sponsor' : 'Add Sponsor'"
           [subheader]="editMode ? 'Sponsor bearbeiten' : 'Neuen Sponsor hinzufügen'">
     <div class="p-grid p-mb-5">
