--- a/apps/flolo-page-admin/src/styles.scss
+++ b/apps/flolo-page-admin/src/styles.scss
@@ -15,6 +15,8 @@
 @import "~primeflex/src/_spacing.scss";
 @import "~primeflex/src/_elevation.scss";
 @import "~animate.css/animate.css";
+@import "~quill/dist/quill.core.css";
+@import "~quill/dist/quill.snow.css";
 
 html {
   height: 100%;
