flo-lo 2.0_BETA

--- a/apps/flolo-page-ui/src/app/pages/events/event-checkout/event-checkout-personal-data/event-checkout-personal-data.component.html
+++ b/apps/flolo-page-ui/src/app/pages/events/event-checkout/event-checkout-personal-data/event-checkout-personal-data.component.html
@@ -44,7 +44,7 @@
     </div>
   </div>
 
-  <div class="p-grid p-nogutter p-justify-end">
+  <div class="grid p-nogutter p-justify-end">
     <button pButton pRipple type="button" label="Weiter" icon="pi pi-angle-right" iconPos="right"
             class="p-button-rounded" (click)="nextPage()"></button>
   </div>
