--- a/apps/flolo-page-ui/src/app/pages/events/event-details/event-details.component.html
+++ b/apps/flolo-page-ui/src/app/pages/events/event-details/event-details.component.html
@@ -11,7 +11,7 @@
       </ng-template>
 
 <!--      <ng-template pTemplate="thumbnail" let-item>-->
-<!--        <div class="p-grid p-nogutter p-justify-center">-->
+<!--        <div class="grid p-nogutter p-justify-center">-->
 <!--          <img [src]="image" style="display: block" />-->
 <!--        </div>-->
 <!--      </ng-template>-->
