--- a/apps/flolo-page-ui/src/app/shared/nav/nav.component.scss
+++ b/apps/flolo-page-ui/src/app/shared/nav/nav.component.scss
@@ -1,17 +1,15 @@
-.nav {
-  li {
-    list-style: none;
-    display: inline-block;
-    margin-right: 15px;
-
-    a {
-      color: var(--text-color);
-      cursor: pointer;
-      text-decoration: none;
-
-      &:hover {
-        color: var(--text-color-secondary);
-      }
-    }
-  }
-}
+//li {
+//  list-style: none;
+//  display: inline-block;
+//  margin: 15px 50px 0 0;
+//
+//  a {
+//    color: var(--text-white);
+//    cursor: pointer;
+//    text-decoration: none;
+//
+//    &:hover {
+//      //color: var(--text-color-secondary);
+//    }
+//  }
+//}
