--- a/libs/ui/src/lib/banner/banner.component.html
+++ b/libs/ui/src/lib/banner/banner.component.html
@@ -1,7 +1,7 @@
 <div class="banner">
-  <div class="p-grid">
-    <div class="p-col-6"></div>
-    <div class="p-col-6 banner-image animate__animated animate__slideInLeft">
+  <div class="grid">
+    <div class="col-6"></div>
+    <div class="col-6 banner-image animate__animated animate__slideInLeft">
       <img src="assets/logo.png" />
     </div>
   </div>
