--- a/apps/flolo-page-ui/src/app/app.component.scss
+++ b/apps/flolo-page-ui/src/app/app.component.scss
@@ -1,10 +1,10 @@
 
 .flpu-wrapper {
   width: 90vw;
-  padding: 15px;
+  //padding: 8px 0 0 0;
   margin: 10px auto 0;
   background-color: var(--surface-e);
-  opacity: 0.9;
+  //opacity: 0.9;
   color: var(--text-color);
   box-shadow: 0 2px 1px -1px rgb(0 0 0 / 20%), 0 1px 1px 0 rgb(0 0 0 / 14%), 0 1px 3px 0 rgb(0 0 0 / 12%);
   border-radius: 4px;
