--- a/apps/flolo-page-ui/src/app/pages/home/home.component.html
+++ b/apps/flolo-page-ui/src/app/pages/home/home.component.html
@@ -1,1 +1,129 @@
-<flpu-events-list></flpu-events-list>
+<!--<flpu-events-list></flpu-events-list>-->
+<div class="flpu-home">
+
+  <div class="grid">
+
+    <div class="col-12 lg:col-4">
+      <div class="p-3 h-full">
+        <div class="shadow-2 p-3 h-full flex flex-column" style="border-radius: 6px">
+          <div>
+            <img alt="Card" src="assets/logo-silberpfeil.jpg" style="max-width: 100%">
+          </div>
+          <div class="text-900 font-medium text-xl mb-2">Silberpfeil</div>
+          <div class="text-600">3-Seen-Tour</div>
+
+          <hr class="my-3 mx-0 border-top-1 border-bottom-none border-300" />
+          <div class="flex align-items-center">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore sed consequuntur error repudiandae numquam deserunt
+              quisquam repellat libero asperiores earum nam nobis, culpa ratione quam perferendis esse, cupiditate neque quas!</p>
+          </div>
+
+          <hr class="my-3 mx-0 border-top-1 border-bottom-none border-300" />
+          <ul class="list-none p-0 m-0 flex-grow-1">
+            <li class="flex align-items-center mb-3">
+              <i class="pi pi-check-circle text-green-500 mr-2"></i>
+              <span>Arcu vitae elementum</span>
+            </li>
+            <li class="flex align-items-center mb-3">
+              <i class="pi pi-check-circle text-green-500 mr-2"></i>
+              <span>Dui faucibus in ornare</span>
+            </li>
+            <li class="flex align-items-center mb-3">
+              <i class="pi pi-check-circle text-green-500 mr-2"></i>
+              <span>Morbi tincidunt augue</span>
+            </li>
+            <li class="flex align-items-center mb-3">
+              <i class="pi pi-check-circle text-green-500 mr-2"></i>
+              <span>Duis ultricies lacus sed</span>
+            </li>
+          </ul>
+          <hr class="mb-3 mx-0 border-top-1 border-bottom-none border-300" />
+          <button pButton pRipple label="Termine" class="p-3 w-full" icon="pi pi-calendar" routerLink="camps/details"></button>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-12 lg:col-4">
+      <div class="p-3 h-full">
+        <div class="shadow-2 p-3 h-full flex flex-column" style="border-radius: 6px">
+          <div>
+            <img alt="Card" src="assets/logo-ateia.png" style="max-width: 100%">
+          </div>
+          <div class="text-900 font-medium text-xl mb-2">Ateia</div>
+          <div class="text-600">Beachcamps</div>
+
+          <hr class="my-3 mx-0 border-top-1 border-bottom-none border-300" />
+          <div class="flex align-items-center">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore sed consequuntur error repudiandae numquam deserunt
+              quisquam repellat libero asperiores earum nam nobis, culpa ratione quam perferendis esse, cupiditate neque quas!</p>
+          </div>
+
+          <hr class="my-3 mx-0 border-top-1 border-bottom-none border-300" />
+          <ul class="list-none p-0 m-0 flex-grow-1">
+            <li class="flex align-items-center mb-3">
+              <i class="pi pi-check-circle text-green-500 mr-2"></i>
+              <span>Arcu vitae elementum</span>
+            </li>
+            <li class="flex align-items-center mb-3">
+              <i class="pi pi-check-circle text-green-500 mr-2"></i>
+              <span>Dui faucibus in ornare</span>
+            </li>
+            <li class="flex align-items-center mb-3">
+              <i class="pi pi-check-circle text-green-500 mr-2"></i>
+              <span>Morbi tincidunt augue</span>
+            </li>
+            <li class="flex align-items-center mb-3">
+              <i class="pi pi-check-circle text-green-500 mr-2"></i>
+              <span>Duis ultricies lacus sed</span>
+            </li>
+          </ul>
+          <hr class="mb-3 mx-0 border-top-1 border-bottom-none border-300" />
+          <button pButton pRipple label="Termine" class="p-3 w-full" icon="pi pi-calendar"></button>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-12 lg:col-4">
+      <div class="p-3 h-full">
+        <div class="shadow-2 p-3 h-full flex flex-column" style="border-radius: 6px">
+          <div>
+            <img alt="Card" src="assets/logo-naturtalente.jpg" style="max-width: 100%">
+          </div>
+          <div class="text-900 font-medium text-xl mb-2">Naturtalente</div>
+          <div class="text-600">Beachteam</div>
+
+          <hr class="my-3 mx-0 border-top-1 border-bottom-none border-300" />
+          <div class="flex align-items-center">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore sed consequuntur error repudiandae numquam deserunt
+              quisquam repellat libero asperiores earum nam nobis, culpa ratione quam perferendis esse, cupiditate neque quas!</p>
+          </div>
+
+          <hr class="my-3 mx-0 border-top-1 border-bottom-none border-300" />
+          <ul class="list-none p-0 m-0 flex-grow-1">
+            <li class="flex align-items-center mb-3">
+              <i class="pi pi-check-circle text-green-500 mr-2"></i>
+              <span>Arcu vitae elementum</span>
+            </li>
+            <li class="flex align-items-center mb-3">
+              <i class="pi pi-check-circle text-green-500 mr-2"></i>
+              <span>Dui faucibus in ornare</span>
+            </li>
+            <li class="flex align-items-center mb-3">
+              <i class="pi pi-check-circle text-green-500 mr-2"></i>
+              <span>Morbi tincidunt augue</span>
+            </li>
+            <li class="flex align-items-center mb-3">
+              <i class="pi pi-check-circle text-green-500 mr-2"></i>
+              <span>Duis ultricies lacus sed</span>
+            </li>
+          </ul>
+          <hr class="mb-3 mx-0 border-top-1 border-bottom-none border-300" />
+          <button pButton pRipple label="Team" class="p-3 w-full" icon="pi pi-users" routerLink="beachteam"></button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+
+</div>
