--- a/apps/flolo-page-ui/src/app/shared/header/header.component.html
+++ b/apps/flolo-page-ui/src/app/shared/header/header.component.html
@@ -1,18 +1,21 @@
-<header>
-  <div class="p-grid">
-    <div class="p-col-3 logo">
-      <a routerLink="/">
-        <img src="assets/logo.png" alt="logo" /><br />
-        Schnetzer / Petutschnig
-      </a>
-    </div>
+<!--<header>-->
+<!--  <div class="shadow-2 bg-blue-200">-->
+<!--    <div class="grid">-->
+<!--      <div class="col-1 logo flex align-items-center justify-content-between ">-->
+<!--        <a routerLink="/">-->
+<!--          <img src="assets/logo.png" alt="logo" />-->
+<!--        </a>-->
+<!--      </div>-->
 
-    <div class="p-col-8 p-offset-1 navigation">
-      <flpu-nav></flpu-nav>
-    </div>
-
-<!--    <div class="p-col-1 actions">-->
-<!--      <button pButton pRipple type="button" icon="pi pi-sign-out" class="p-button-rounded p-button-secondary p-button-text"></button>-->
+<!--      <div class="col-10 p-offset-1 navigation">-->
+<!--        <flpu-nav></flpu-nav>-->
+<!--      </div>-->
 <!--    </div>-->
+<!--  </div>-->
+<!--</header>-->
+
+<header>
+  <div class="shadow-2 bg-gray-900 text-white">
+    <flpu-nav></flpu-nav>
   </div>
 </header>
