--- a/apps/flolo-page-ui/src/app/shared/nav/nav.component.html
+++ b/apps/flolo-page-ui/src/app/shared/nav/nav.component.html
@@ -1,8 +1,35 @@
-<ul class="nav">
-  <li>
-    <a routerLink="/">Camps</a>
-  </li>
-  <li>
-    <a routerLink="/sponsors">Sponsors</a>
-  </li>
-</ul>
+
+<div class="nav-bar bg-gray-900 surface-overlay py-3 px-6 shadow-2 flex align-items-center justify-content-between relative lg:static">
+  <a class="cursor-pointer block lg:hidden text-700"
+     (click)="toggleNavBar()">
+    <i class="pi pi-bars text-4xl"></i>
+  </a>
+  <div id="navLinks" class="bg-gray-900 align-items-center flex-grow-1 justify-content-between lg:flex absolute lg:static w-full surface-overlay left-0 top-100 px-6 lg:px-0 z-2 shadow-2 lg:shadow-none hidden">
+    <section></section>
+    <ul
+      class="list-none p-0 m-0 flex lg:align-items-center text-white select-none flex-column lg:flex-row cursor-pointer">
+      <li class="relative">
+        <a class="flex px-0 lg:px-5 py-3 align-items-center hover:text-blue-600 font-medium transition-colors transition-duration-150"
+        enteractiveclass="scalein" enterclass="hidden" leaveactiveclass="fadeout" leavetoclass="hidden"
+        pstyleclass="@next">
+          <span class="hover:text-blue-600">Silberpfeil 3-Seen-Tour</span></a>
+      </li>
+      <li>
+        <a class="flex px-0 lg:px-5 py-3 hover:text-blue-600 font-medium transition-colors transition-duration-150">
+          <span class="hover:text-blue-600">Ateia Beachcamps</span>
+        </a>
+      </li>
+      <li>
+        <a class="flex px-0 lg:px-5 py-3 hover:text-blue-600 font-medium transition-colors transition-duration-150">
+          <span class="hover:text-blue-600">Naturtalente Beachteam</span>
+        </a>
+      </li>
+    </ul>
+    <div class="flex justify-content-between lg:block py-2 mt-0">
+<!--      <button class="p-button-text font-bold p-ripple p-button p-component" label="Login" pbutton="" pripple=""><span-->
+<!--        class="p-button-label">Login</span><span class="p-ink"></span></button>-->
+<!--      <button class="ml-3 p-button-outlined font-bold p-ripple p-button p-component" label="Register" pbutton=""-->
+<!--              pripple=""><span class="p-button-label">Register</span><span class="p-ink"></span></button>-->
+    </div>
+  </div>
+</div>
