--- a/libs/users/src/lib/pages/login/login.component.html
+++ b/libs/users/src/lib/pages/login/login.component.html
@@ -1,13 +1,13 @@
 <div class="login-register">
   <div class="login-register-panel">
-    <div class="p-grid">
-      <div class="p-col-12" style="text-align: center">
+    <div class="grid">
+      <div class="col-12" style="text-align: center">
         <img src="assets/login-photo.png" />
       </div>
-      <div class="p-col-12">
+      <div class="col-12">
         <form [formGroup]="loginFormGroup">
-          <div class="p-grid">
-            <div class="p-col-12">
+          <div class="grid">
+            <div class="col-12">
               <div class="p-inputgroup">
                 <span class="p-inputgroup-addon"><i class="pi pi-user"></i></span>
                 <input type="text" formControlName="email" pInputText placeholder="Email">
@@ -18,7 +18,7 @@
               </small>
             </div>
 
-            <div class="p-col-12">
+            <div class="col-12">
               <div class="p-inputgroup">
                 <span class="p-inputgroup-addon"><i class="pi pi-lock"></i></span>
                 <input type="password" formControlName="password" pInputText placeholder="Password">
@@ -28,7 +28,7 @@
               </small>
             </div>
 
-            <div class="p-col-12">
+            <div class="col-12">
               <div class="p-inputgroup">
                 <button pButton pRipple type="button" label="Login" icon="pi pi-check"
                         class="p-button-rounded" style="width: 100%;"
@@ -36,7 +36,7 @@
               </div>
             </div>
 
-            <div class="p-col-12" *ngIf="isSubmitted && authMessage">
+            <div class="col-12" *ngIf="isSubmitted && authMessage">
               <small class="p-error">{{authMessage}}</small>
             </div>
           </div>
