flo-lo 2.0_BETA

--- a/apps/flolo-page-ui/src/app/app.component.html
+++ b/apps/flolo-page-ui/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="flpu-wrapper">
-  <flpu-header></flpu-header>
+<!--  <flpu-header></flpu-header>-->
   <p-toast [breakpoints]="{'920px': {width: '100%', right: '0', left: '0'}}"></p-toast>
   <router-outlet></router-outlet>
   <flpu-footer></flpu-footer>
