--- a/apps/flolo-page-ui/src/app/app.component.scss
+++ b/apps/flolo-page-ui/src/app/app.component.scss
@@ -1,8 +1,8 @@
 
 .flpu-wrapper {
-  width: 90vw;
+  //width: 90vw;
   //padding: 8px 0 0 0;
-  margin: 10px auto 0;
+  //margin: 10px auto 0;
   background-color: var(--surface-e);
   //opacity: 0.9;
   color: var(--text-color);
