--- a/apps/flolo-page-ui/src/styles.scss
+++ b/apps/flolo-page-ui/src/styles.scss
@@ -19,7 +19,7 @@ body {
   margin: 0;
   padding: 0;
   //background-image: url("assets/pet_schn.jpeg");
-  background-image: url("assets/background.webp");
+  //background-image: url("assets/background.webp");
   background-attachment: fixed;
   background-size:     cover;
   background-repeat:   no-repeat;
