--- a/apps/flolo-page-ui/src/app/pages/home/home.component.html
+++ b/apps/flolo-page-ui/src/app/pages/home/home.component.html
@@ -1,129 +1,59 @@
 <!--<flpu-events-list></flpu-events-list>-->
 <div class="flpu-home">
 
-  <div class="grid">
-
-    <div class="col-12 lg:col-4">
-      <div class="p-3 h-full">
-        <div class="shadow-2 p-3 h-full flex flex-column" style="border-radius: 6px">
-          <div>
-            <img alt="Card" src="assets/logo-silberpfeil.jpg" style="max-width: 100%">
-          </div>
-          <div class="text-900 font-medium text-xl mb-2">Silberpfeil</div>
-          <div class="text-600">3-Seen-Tour</div>
-
-          <hr class="my-3 mx-0 border-top-1 border-bottom-none border-300" />
-          <div class="flex align-items-center">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore sed consequuntur error repudiandae numquam deserunt
-              quisquam repellat libero asperiores earum nam nobis, culpa ratione quam perferendis esse, cupiditate neque quas!</p>
-          </div>
-
-          <hr class="my-3 mx-0 border-top-1 border-bottom-none border-300" />
-          <ul class="list-none p-0 m-0 flex-grow-1">
-            <li class="flex align-items-center mb-3">
-              <i class="pi pi-check-circle text-green-500 mr-2"></i>
-              <span>Arcu vitae elementum</span>
-            </li>
-            <li class="flex align-items-center mb-3">
-              <i class="pi pi-check-circle text-green-500 mr-2"></i>
-              <span>Dui faucibus in ornare</span>
-            </li>
-            <li class="flex align-items-center mb-3">
-              <i class="pi pi-check-circle text-green-500 mr-2"></i>
-              <span>Morbi tincidunt augue</span>
-            </li>
-            <li class="flex align-items-center mb-3">
-              <i class="pi pi-check-circle text-green-500 mr-2"></i>
-              <span>Duis ultricies lacus sed</span>
-            </li>
-          </ul>
-          <hr class="mb-3 mx-0 border-top-1 border-bottom-none border-300" />
-          <button pButton pRipple label="Termine" class="p-3 w-full" icon="pi pi-calendar" routerLink="camps/details"></button>
-        </div>
-      </div>
-    </div>
-
-    <div class="col-12 lg:col-4">
-      <div class="p-3 h-full">
-        <div class="shadow-2 p-3 h-full flex flex-column" style="border-radius: 6px">
-          <div>
-            <img alt="Card" src="assets/logo-ateia.png" style="max-width: 100%">
-          </div>
-          <div class="text-900 font-medium text-xl mb-2">Ateia</div>
-          <div class="text-600">Beachcamps</div>
-
-          <hr class="my-3 mx-0 border-top-1 border-bottom-none border-300" />
-          <div class="flex align-items-center">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore sed consequuntur error repudiandae numquam deserunt
-              quisquam repellat libero asperiores earum nam nobis, culpa ratione quam perferendis esse, cupiditate neque quas!</p>
-          </div>
-
-          <hr class="my-3 mx-0 border-top-1 border-bottom-none border-300" />
-          <ul class="list-none p-0 m-0 flex-grow-1">
-            <li class="flex align-items-center mb-3">
-              <i class="pi pi-check-circle text-green-500 mr-2"></i>
-              <span>Arcu vitae elementum</span>
-            </li>
-            <li class="flex align-items-center mb-3">
-              <i class="pi pi-check-circle text-green-500 mr-2"></i>
-              <span>Dui faucibus in ornare</span>
-            </li>
-            <li class="flex align-items-center mb-3">
-              <i class="pi pi-check-circle text-green-500 mr-2"></i>
-              <span>Morbi tincidunt augue</span>
-            </li>
-            <li class="flex align-items-center mb-3">
-              <i class="pi pi-check-circle text-green-500 mr-2"></i>
-              <span>Duis ultricies lacus sed</span>
-            </li>
-          </ul>
-          <hr class="mb-3 mx-0 border-top-1 border-bottom-none border-300" />
-          <button pButton pRipple label="Termine" class="p-3 w-full" icon="pi pi-calendar"></button>
-        </div>
-      </div>
-    </div>
-
-    <div class="col-12 lg:col-4">
-      <div class="p-3 h-full">
-        <div class="shadow-2 p-3 h-full flex flex-column" style="border-radius: 6px">
-          <div>
-            <img alt="Card" src="assets/logo-naturtalente.jpg" style="max-width: 100%">
-          </div>
-          <div class="text-900 font-medium text-xl mb-2">Naturtalente</div>
-          <div class="text-600">Beachteam</div>
-
-          <hr class="my-3 mx-0 border-top-1 border-bottom-none border-300" />
-          <div class="flex align-items-center">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore sed consequuntur error repudiandae numquam deserunt
-              quisquam repellat libero asperiores earum nam nobis, culpa ratione quam perferendis esse, cupiditate neque quas!</p>
-          </div>
-
-          <hr class="my-3 mx-0 border-top-1 border-bottom-none border-300" />
-          <ul class="list-none p-0 m-0 flex-grow-1">
-            <li class="flex align-items-center mb-3">
-              <i class="pi pi-check-circle text-green-500 mr-2"></i>
-              <span>Arcu vitae elementum</span>
-            </li>
-            <li class="flex align-items-center mb-3">
-              <i class="pi pi-check-circle text-green-500 mr-2"></i>
-              <span>Dui faucibus in ornare</span>
-            </li>
-            <li class="flex align-items-center mb-3">
-              <i class="pi pi-check-circle text-green-500 mr-2"></i>
-              <span>Morbi tincidunt augue</span>
-            </li>
-            <li class="flex align-items-center mb-3">
-              <i class="pi pi-check-circle text-green-500 mr-2"></i>
-              <span>Duis ultricies lacus sed</span>
-            </li>
-          </ul>
-          <hr class="mb-3 mx-0 border-top-1 border-bottom-none border-300" />
-          <button pButton pRipple label="Team" class="p-3 w-full" icon="pi pi-users" routerLink="beachteam"></button>
-        </div>
-      </div>
-    </div>
+  <div class="bg-white p-4">
+    <span style="font-size: 50px; text-align: center;">Flo & Lo @ the Beach</span>
   </div>
 
+  <img alt="Image" class="block mx-auto w-full" src="assets/social/DSC03425.jpg">
 
+  <div class="grid bg-bluegray-50">
+
+    <div class="col-4 lg:col-4">
+      <a class="cursor-pointer no-underline text-gray-900" routerLink="3-seen-tour">
+      <div class="p-3 h-full">
+        <div class="shadow-2 p-3 h-full flex flex-column" style="border-radius: 6px">
+          <div class="font-bold text-xl md:text-5xl mb-2">Silberpfeil</div>
+          <div class="fond-medium text-l md:text-3xl">3-Seen-Tour</div>
+          <div class="mt-2">
+            <img alt="Card" src="assets/landing-page/pages/3_seen.jpg" style="max-width: 100%">
+
+          </div>
+        </div>
+      </div>
+      </a>
+    </div>
+
+    <div class="col-4 lg:col-4">
+      <a class="cursor-pointer no-underline text-gray-900" routerLink="beachcamps">
+        <div class="p-3 h-full">
+          <div class="shadow-2 p-3 h-full flex flex-column" style="border-radius: 6px">
+            <div class="font-bold text-xl md:text-5xl mb-2">Ateia</div>
+            <div class="fond-medium text-l md:text-3xl">Beachcamps</div>
+            <div class="mt-2">
+              <img alt="Card" src="assets/landing-page/pages/camps.jpeg" style="max-width: 100%">
+
+            </div>
+          </div>
+        </div>
+      </a>
+    </div>
+
+    <div class="col-4 lg:col-4">
+      <a class="cursor-pointer no-underline text-gray-900" routerLink="beachteam">
+        <div class="p-3 h-full">
+          <div class="shadow-2 p-3 h-full flex flex-column" style="border-radius: 6px">
+            <div class="font-bold text-xl md:text-5xl mb-2">Naturtalente</div>
+            <div class="fond-medium text-l md:text-3xl">Beachteam</div>
+            <div class="mt-2">
+              <img alt="Card" src="assets/landing-page/pages/team.jpeg" style="max-width: 100%">
+
+            </div>
+          </div>
+        </div>
+      </a>
+    </div>
+
+  </div>
 
 </div>
