--- a/apps/flolo-page-ui/src/app/shared/footer/footer.component.html
+++ b/apps/flolo-page-ui/src/app/shared/footer/footer.component.html
@@ -1,5 +1,5 @@
-<div class="bg-gray-900 px-4 py-5 md:px-6 lg:px-8 ng-star-inserted">
-  <div class="bg-gray-900">
+<div class="bg-bluegray-200 px-4 py-5 md:px-6 lg:px-8 ng-star-inserted">
+  <div class="bg-bluegray-200">
     <div class="grid">
 <!--      <div class="col-12 md:col-3 flex flex-wrap justify-content-start md:mb-0 mb-3">-->
 <!--        <img alt="Image" src="assets/images/blocks/logos/alfred-300.svg">-->
@@ -14,15 +14,19 @@
 <!--      </div>-->
       <div class="col-6 md:col-4 text-gray-200">
 <!--        <div class="text-white font-bold line-height-3 mb-3">Camps</div>-->
-        <a class="line-height-3 block cursor-pointer mb-2 hover:text-blue-600 transition-colors transition-duration-150">Silberpfeil 3-Seen-Tour</a>
+        <a class="line-height-3 block cursor-pointer mb-2 hover:text-blue-600 transition-colors transition-duration-150"
+           routerLink="3-seen-tour">Silberpfeil 3-Seen-Tour</a>
         <a class="line-height-3 block cursor-pointer mb-2 hover:text-blue-600 transition-colors transition-duration-150">Ateia Beachcamps</a>
-        <a class="line-height-3 block cursor-pointer hover:text-blue-600 transition-colors transition-duration-150">Naturtalente Beachteam</a>
+        <a class="line-height-3 block cursor-pointer hover:text-blue-600 transition-colors transition-duration-150"
+           routerLink="beachteam">Naturtalente Beachteam</a>
       </div>
       <div class="col-6 md:col-4 text-gray-200">
 <!--        <div class="text-white font-bold line-height-3 mb-3">Weiteres</div>-->
-        <a class="line-height-3 block cursor-pointer mb-2 hover:text-blue-600 transition-colors transition-duration-150" routerLink="faq">FAQ</a>
+        <a class="line-height-3 block cursor-pointer mb-2 hover:text-blue-600 transition-colors transition-duration-150"
+           routerLink="faq">FAQ</a>
         <a class="line-height-3 block cursor-pointer mb-2 hover:text-blue-600 transition-colors transition-duration-150">Impressum</a>
-        <a class="line-height-3 block cursor-pointer hover:text-blue-600 transition-colors transition-duration-150" routerLink="contact">Kontakt</a>
+        <a class="line-height-3 block cursor-pointer hover:text-blue-600 transition-colors transition-duration-150"
+           routerLink="contact">Kontakt</a>
       </div>
       <div class="col-12 md:col-4 text-gray-200">
         <div class="text-700 line-height-3 mb-3">
