--- a/apps/flolo-page-ui/src/app/shared/nav/nav.component.html
+++ b/apps/flolo-page-ui/src/app/shared/nav/nav.component.html
@@ -9,19 +9,21 @@
     <ul
       class="list-none p-0 m-0 flex lg:align-items-center text-white select-none flex-column lg:flex-row cursor-pointer">
       <li class="relative">
-        <a class="flex px-0 lg:px-5 py-3 align-items-center hover:text-blue-600 font-medium transition-colors transition-duration-150"
-        enteractiveclass="scalein" enterclass="hidden" leaveactiveclass="fadeout" leavetoclass="hidden"
-        pstyleclass="@next">
-          <span class="hover:text-blue-600">Silberpfeil 3-Seen-Tour</span></a>
-      </li>
-      <li>
-        <a class="flex px-0 lg:px-5 py-3 hover:text-blue-600 font-medium transition-colors transition-duration-150">
-          <span class="hover:text-blue-600">Ateia Beachcamps</span>
+        <a class="flex px-0 lg:px-5 py-3 cursor-pointer no-underline text-white hover:text-blue-600 font-bold transition-colors transition-duration-150"
+        enteractiveclass="scalein" enterclass="hidden" leaveactiveclass="fadeout" leavetoclass="hidden" pstyleclass="@next"
+        routerLink="3-seen-tour">
+          Silberpfeil 3-Seen-Tour
         </a>
       </li>
       <li>
-        <a class="flex px-0 lg:px-5 py-3 hover:text-blue-600 font-medium transition-colors transition-duration-150">
-          <span class="hover:text-blue-600">Naturtalente Beachteam</span>
+        <a class="flex px-0 lg:px-5 py-3 cursor-pointer no-underline text-white hover:text-blue-600 font-bold transition-colors transition-duration-150">
+          Ateia Beachcamps
+        </a>
+      </li>
+      <li>
+        <a class="flex px-0 lg:px-5 py-3 cursor-pointer no-underline text-white hover:text-blue-600 font-bold transition-colors transition-duration-150"
+           routerLink="beachteam">
+          Naturtalente Beachteam
         </a>
       </li>
     </ul>
