--- a/apps/flolo-page-ui/src/app/shared/footer/footer.component.html
+++ b/apps/flolo-page-ui/src/app/shared/footer/footer.component.html
@@ -1,34 +1,24 @@
 <div class="bg-bluegray-200 px-4 py-5 md:px-6 lg:px-8 ng-star-inserted">
   <div class="bg-bluegray-200">
     <div class="grid">
-<!--      <div class="col-12 md:col-3 flex flex-wrap justify-content-start md:mb-0 mb-3">-->
-<!--        <img alt="Image" src="assets/images/blocks/logos/alfred-300.svg">-->
-<!--      </div>-->
-<!--      <div class="col-12 md:col-3">-->
-<!--        <div class="text-white text-lg mb-4 flex flex-wrap" style="max-width: 290px">-->
-<!--          Eine Straße 1, 1020 Wien-->
-<!--          Austria-->
-<!--        </div>-->
-<!--        <div class="text-white mb-3"><i class="pi pi-phone border-round p-1 mr-2"></i>(+43) 123 456 789</div>-->
-<!--        <div class="text-white mb-3"><i class="pi pi-inbox border-round p-1 mr-2"></i>mail@gmail.com</div>-->
-<!--      </div>-->
-      <div class="col-6 md:col-4 text-gray-200">
-<!--        <div class="text-white font-bold line-height-3 mb-3">Camps</div>-->
+
+      <div class="col-6 md:col-4 text-gray-900">
         <a class="line-height-3 block cursor-pointer mb-2 hover:text-blue-600 transition-colors transition-duration-150"
            routerLink="3-seen-tour">Silberpfeil 3-Seen-Tour</a>
-        <a class="line-height-3 block cursor-pointer mb-2 hover:text-blue-600 transition-colors transition-duration-150">Ateia Beachcamps</a>
+        <a class="line-height-3 block cursor-pointer mb-2 hover:text-blue-600 transition-colors transition-duration-150"
+           routerLink="beachcamps">Ateia Beachcamps</a>
         <a class="line-height-3 block cursor-pointer hover:text-blue-600 transition-colors transition-duration-150"
            routerLink="beachteam">Naturtalente Beachteam</a>
       </div>
-      <div class="col-6 md:col-4 text-gray-200">
-<!--        <div class="text-white font-bold line-height-3 mb-3">Weiteres</div>-->
+      <div class="col-6 md:col-4 text-gray-900">
         <a class="line-height-3 block cursor-pointer mb-2 hover:text-blue-600 transition-colors transition-duration-150"
            routerLink="faq">FAQ</a>
-        <a class="line-height-3 block cursor-pointer mb-2 hover:text-blue-600 transition-colors transition-duration-150">Impressum</a>
+        <a class="line-height-3 block cursor-pointer mb-2 hover:text-blue-600 transition-colors transition-duration-150"
+           routerLink="impressum">Impressum</a>
         <a class="line-height-3 block cursor-pointer hover:text-blue-600 transition-colors transition-duration-150"
            routerLink="contact">Kontakt</a>
       </div>
-      <div class="col-12 md:col-4 text-gray-200">
+      <div class="col-12 md:col-4 text-gray-900">
         <div class="text-700 line-height-3 mb-3">
           Meldet euch zu unserem Newsletter an um als erster alle Infos zu unseren neusten Camps und Events zu erhalten.
         </div>
