--- a/apps/flolo-page-admin/src/app/pages/camps/camps-form/camps-form.component.html
+++ b/apps/flolo-page-admin/src/app/pages/camps/camps-form/camps-form.component.html
@@ -1,8 +1,8 @@
 <div class="flpa-camps-form">
   <p-card [header]="editMode ? 'Edit Camp' : 'Add Camp'"
           [subheader]="editMode ? 'Camp bearbeiten' : 'Neues Camp hinzufügen'">
-    <div class="p-grid p-mb-5">
-      <div class="p-col-12">
+    <div class="grid p-mb-5">
+      <div class="col-12">
         <p-toolbar>
           <div class="p-toolbar-group-left"></div>
           <div class="p-toolbar-group-right">
@@ -18,22 +18,22 @@
         </p-toolbar>
       </div>
 
-      <div class="p-col-12">
+      <div class="col-12">
         <form [formGroup]="form">
-          <div class="p-fluid p-formgrid p-grid">
-            <div class="p-field p-col-12">
+          <div class="p-fluid p-formgrid grid">
+            <div class="p-field col-12">
               <label for="name">Name</label>
               <input formControlName="name" id="name" type="text" pInputText />
               <small *ngIf="campForm.name.invalid && isSubmitted" class="p-error">Name wird benötigt</small>
             </div>
 
-            <div class="p-field p-col-12">
+            <div class="p-field col-12">
               <label for="location">Location</label>
               <input formControlName="location" id="location" type="text" pInputText />
               <small *ngIf="campForm.location.invalid && isSubmitted" class="p-error">Location wird benötigt</small>
             </div>
 
-            <div class="p-field p-col-12 p-sm-6">
+            <div class="p-field col-12 p-sm-6">
               <label for="date">Datum</label>
               <p-calendar formControlName="date" id="date"
                           dateFormat="dd/mm/yy"
@@ -42,29 +42,29 @@
               <small *ngIf="campForm.date.invalid && isSubmitted" class="p-error">Datum wird benötigt</small>
             </div>
 
-            <div class="p-field p-col-12 p-sm-6">
+            <div class="p-field col-12 p-sm-6">
               <label for="price">Preis</label>
               <p-inputNumber formControlName="price" id="price" inputId="currency" suffix=" €" [min]="0"></p-inputNumber>
               <small *ngIf="campForm.price.invalid && isSubmitted" class="p-error">Preis wird benötigt</small>
             </div>
 
-            <div class="p-field p-col-12">
+            <div class="p-field col-12">
               <label for="description">Beschreibung</label>
               <p-editor formControlName="description" id="description" [style]="{'height':'320px'}"></p-editor>
               <small *ngIf="campForm.description.invalid && isSubmitted" class="p-error">Beschreibung wird benötigt</small>
             </div>
 
-            <div class="p-field p-col-12">
+            <div class="p-field col-12">
               <label for="image">Anzeigebild</label>
               <input id="image" type="file" accept="image/*" pInputText
                      (change)="onImageUpload($event)"/>
 
-              <div class="p-col-4 p-mt-2 p-pl-0">
+              <div class="col-4 p-mt-2 p-pl-0">
                 <img [src]="imagePreview" alt="" style="width: 100%" />
               </div>
             </div>
 
-            <div class="p-field p-col-12">
+            <div class="p-field col-12">
               <label for="images">Gallery</label>
               <input id="images" type="file" accept="image/*" pInputText multiple
                      (change)="onImagesUpload($event)"/>
@@ -84,7 +84,7 @@
                 </ng-template>
 
                 <ng-template pTemplate="thumbnail" let-image>
-                  <div class="p-grid p-nogutter p-justify-center p-pr-2">
+                  <div class="grid p-nogutter p-justify-center p-pr-2">
                     <img [src]="image" style="width: 100%; display: block" />
                   </div>
                 </ng-template>
