--- a/apps/flolo-page-admin/src/app/pages/camps/camps-list/camps-list.component.html
+++ b/apps/flolo-page-admin/src/app/pages/camps/camps-list/camps-list.component.html
@@ -1,7 +1,7 @@
 <div class="flpa-camps-list">
   <p-card header="Camps" subheader="Liste der Camps">
-    <div class="p-grid">
-      <div class="p-col-12">
+    <div class="grid">
+      <div class="col-12">
         <p-toolbar>
           <div class="p-toolbar-group-left">
             <button pButton pRipple type="button" label="Neu" icon="pi pi-plus"
@@ -11,7 +11,7 @@
         </p-toolbar>
       </div>
 
-      <div class="p-col-12">
+      <div class="col-12">
         <p-table id="camps-table" [value]="camps">
           <ng-template pTemplate="header">
             <tr>
