--- a/apps/flolo-page-admin/src/app/pages/camps/camps-registrations/camps-registrations.component.html
+++ b/apps/flolo-page-admin/src/app/pages/camps/camps-registrations/camps-registrations.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="registrations" class="flpa-camps-registrations">
   <p-card header="Anmeldungen" [subheader]="'Liste der Anmeldungen für \'' + camp.name + '\''">
-    <div class="p-grid">
-      <div class="p-col-12">
+    <div class="grid">
+      <div class="col-12">
         <p-toolbar>
           <div class="p-toolbar-group-left">
             <button pButton pRipple type="button" label="Neu" icon="pi pi-plus"
@@ -10,7 +10,7 @@
         </p-toolbar>
       </div>
 
-      <div class="p-col-12">
+      <div class="col-12">
         <p-table id="camps-registrations-table" [value]="registrations">
           <ng-template pTemplate="header">
             <tr>
