--- a/apps/flolo-page-admin/src/app/pages/sponsors/sponsors-list/sponsors-list.component.html
+++ b/apps/flolo-page-admin/src/app/pages/sponsors/sponsors-list/sponsors-list.component.html
@@ -1,7 +1,7 @@
 <div class="flpa-sponsors-list">
   <p-card header="Sponsors" subheader="Liste der Sponsoren">
-    <div class="p-grid">
-      <div class="p-col-12">
+    <div class="grid">
+      <div class="col-12">
         <p-toolbar>
           <div class="p-toolbar-group-left">
             <button pButton pRipple type="button" label="Neu" icon="pi pi-plus"
@@ -11,7 +11,7 @@
         </p-toolbar>
       </div>
 
-      <div class="p-col-12">
+      <div class="col-12">
         <p-table id="sponsors-table" [value]="sponsors">
           <ng-template pTemplate="header">
             <tr>
