--- a/apps/flolo-page-admin/src/styles.scss
+++ b/apps/flolo-page-admin/src/styles.scss
@@ -6,17 +6,17 @@
 @import "~primeicons/primeicons.css";
 @import "~primeng/resources/themes/arya-blue/theme.css";
 @import "~primeng/resources/primeng.min.css";
-@import "~primeflex/src/_variables.scss";
-@import "~primeflex/src/_grid.scss";
-@import "~primeflex/src/_formlayout.scss";
-@import "~primeflex/src/_display.scss";
-@import "~primeflex/src/_text.scss";
-@import "~primeflex/src/flexbox/_flexbox";
-@import "~primeflex/src/_spacing.scss";
-@import "~primeflex/src/_elevation.scss";
-@import "~animate.css/animate.css";
-@import "~quill/dist/quill.core.css";
-@import "~quill/dist/quill.snow.css";
+//@import "~primeflex/src/_variables.scss";
+//@import "~primeflex/src/_grid.scss";
+//@import "~primeflex/src/_formlayout.scss";
+//@import "~primeflex/src/_display.scss";
+//@import "~primeflex/src/_text.scss";
+//@import "~primeflex/src/flexbox/_flexbox";
+//@import "~primeflex/src/_spacing.scss";
+//@import "~primeflex/src/_elevation.scss";
+//@import "~animate.css/animate.css";
+//@import "~quill/dist/quill.core.css";
+//@import "~quill/dist/quill.snow.css";
 
 html {
   height: 100%;
