--- a/apps/flolo-page-ui/src/app/shared/nav/nav.component.html
+++ b/apps/flolo-page-ui/src/app/shared/nav/nav.component.html
@@ -1,6 +1,8 @@
 
 <div class="nav-bar bg-bluegray-200 surface-overlay py-4 px-6 shadow-2 flex align-items-center justify-content-between relative">
-  <span class="text-gray-900 font-bold text-2xl md:text-5xl lg:text-9xl">Flo & Lo @ the Beach</span>
+  <a class="cursor-pointer no-underline" routerLink="/">
+    <span class="text-gray-900 font-bold text-2xl md:text-5xl lg:text-9xl">Flo & Lo @ the Beach</span>
+  </a>
 
   <a class="cursor-pointer block text-700" (click)="toggleNavBar()">
     <i class="pi pi-bars text-4xl"></i>
