--- a/apps/flolo-page-ui/src/app/pages/camps/beachcamps/checkout/checkout-confirmation/checkout-confirmation.component.html
+++ b/apps/flolo-page-ui/src/app/pages/camps/beachcamps/checkout/checkout-confirmation/checkout-confirmation.component.html
@@ -38,6 +38,14 @@
       <div class="col">Anmerkungen</div>
       <div class="col">{{personalData.comment}}</div>
     </div>
+
+    <div class="grid">
+      <div class="col">Bereits teilgenommen</div>
+      <div class="col">
+        <i *ngIf="personalData.previousParticipant" class="pi pi-check"></i>
+        <i *ngIf="!personalData.previousParticipant" class="pi pi-times"></i>
+      </div>
+    </div>
   </div>
 
   <div class="grid">
