--- a/apps/flolo-page-ui/src/app/pages/camps/beachcamps/checkout/checkout-person-data/checkout-person-data.component.html
+++ b/apps/flolo-page-ui/src/app/pages/camps/beachcamps/checkout/checkout-person-data/checkout-person-data.component.html
@@ -2,22 +2,65 @@
   <div class="grid formgrid p-fluid">
 
     <div class="field mb-4 col-12">
+      <label class="font-medium pt-2" for="camp">Camp</label>
+      <p-dropdown id="camp"
+                  *ngIf="!campSelected"
+                  [required]="true"
+                  placeholder="Wähle ein Camp" [options]="camps"
+                  [(ngModel)]="eventData.event"
+                  optionLabel="name">
+        <ng-template let-camp pTemplate="item">
+          <div class="camp-item">
+            <div>{{camp.name}} ({{camp.startDate | date:'dd/MM/yyyy'}} - {{camp.endDate | date:'dd/MM/yyyy'}})</div>
+          </div>
+        </ng-template>
+        <ng-template pTemplate="selectedItem">
+          <div class="camp-item">
+            <div>{{eventData.event.name}} ({{eventData.event.startDate | date:'dd/MM/yyyy'}} - {{eventData.event.endDate | date:'dd/MM/yyyy'}})</div>
+          </div>
+        </ng-template>
+      </p-dropdown>
+      <div *ngIf="!eventData.event.id && isSubmitted" class="alert">
+        <small class="p-error">Bitte wähle ein Camp aus!</small>
+      </div>
+
+      <div *ngIf="campSelected" class="text-2xl">
+        {{eventData.event.name}} ({{eventData.event.startDate | date:'dd/MM/yyyy'}} - {{eventData.event.endDate | date:'dd/MM/yyyy'}})
+      </div>
+    </div>
+
+    <div class="surface-border border-top-1 opacity-50 mb-3 col-12"></div>
+
+    <div class="field mb-4 col-12">
       <label class="font-medium" for="firstname">Vorname</label>
-      <input #firstName="ngModel" id="firstname" pinputtext="" type="text" required class="p-inputtext p-component"
-             [ngClass]="{'ng-dirty': (firstName.invalid && isSubmitted) || (firstName.dirty && firstName.invalid)}"
-             [(ngModel)]="personalData.firstName">
+      <div>
+        <input #firstName="ngModel" id="firstname" pinputtext="" type="text" required class="p-inputtext p-component"
+               [ngClass]="{'ng-dirty': (firstName.invalid && isSubmitted) || (firstName.dirty && firstName.invalid)}"
+               [(ngModel)]="personalData.firstName">
+        <small *ngIf="(firstName.invalid && isSubmitted) || (firstName.dirty && firstName.invalid)" class="p-error">
+          Bitte fülle deinen Vornamen aus!
+        </small>
+      </div>
 
       <label class="font-medium pt-2" for="lastname">Nachname</label>
-      <input id="lastname" pinputtext="" type="text" class="p-inputtext p-component"
+      <input #lastName="ngModel" id="lastname" pinputtext="" type="text" required class="p-inputtext p-component"
+             [ngClass]="{'ng-dirty': (lastName.invalid && isSubmitted) || (lastName.dirty && lastName.invalid)}"
              [(ngModel)]="personalData.lastName">
+      <small *ngIf="(lastName.invalid && isSubmitted) || (lastName.dirty && lastName.invalid)" class="p-error">
+        Bitte fülle deinen Nachname aus!
+      </small>
     </div>
 
     <div class="surface-border border-top-1 opacity-50 mb-3 col-12"></div>
 
     <div class="field mb-4 col-12 md:col-6">
       <label class="font-medium" for="email">Email</label>
-      <input id="email" pinputtext="" type="text" class="p-inputtext p-component"
+      <input #email="ngModel" id="email" pinputtext="" type="text" required email class="p-inputtext p-component"
+             [ngClass]="{'ng-dirty': (email.invalid && isSubmitted) || (email.dirty && email.invalid)}"
              [(ngModel)]="personalData.email">
+      <small *ngIf="email.invalid && isSubmitted" class="p-error">
+        Bitte verwende eine valide E-Mail!
+      </small>
     </div>
 
     <div class="surface-border border-top-1 opacity-50 mb-3 col-12"></div>
@@ -30,7 +73,7 @@
                 [(ngModel)]="personalData.comment"></textarea>
 
       <div class="flex align-items-center">
-        <p-inputSwitch>
+        <p-inputSwitch [(ngModel)]="personalData.previousParticipant">
           <div class="p-inputswitch p-component">
             <div class="p-hidden-accessible">
               <input role="switch" type="checkbox" aria-checked="false">
@@ -50,56 +93,3 @@
     </div>
   </div>
 </div>
-
-
-<!--<p-card *ngIf="eventData.event.name" [header]="'Anmeldung \'' + eventData.event.name + '\''">-->
-<!--  <div class="p-fluid event-checkout-personal-data">-->
-<!--    <div class="p-field">-->
-<!--      <span class="p-float-label">-->
-<!--        <input #firstName="ngModel" id="firstName" type="text" required pInputText-->
-<!--               [(ngModel)]="personalData.firstName"-->
-<!--               [ngClass]="{'ng-dirty': (firstName.invalid && isSubmitted) || (firstName.dirty && firstName.invalid)}">-->
-<!--        <label for="firstName">Vorname</label>-->
-<!--        <small *ngIf="(firstName.invalid && isSubmitted) || (firstName.dirty && firstName.invalid)" class="p-error">Vorname ist verpflichtend</small>-->
-<!--      </span>-->
-<!--    </div>-->
-
-<!--    <div class="p-field">-->
-<!--      <span class="p-float-label">-->
-<!--        <input #lastName="ngModel" id="lastName" type="text" required pInputText-->
-<!--               [(ngModel)]="personalData.lastName"-->
-<!--               [ngClass]="{'ng-dirty': (lastName.invalid && isSubmitted) || (lastName.dirty && lastName.invalid)}">-->
-<!--        <label for="lastName">Nachname</label>-->
-<!--        <small *ngIf="(lastName.invalid && isSubmitted) || (lastName.dirty && lastName.invalid)" class="p-error">Nachname ist verpflichtend</small>-->
-<!--      </span>-->
-<!--    </div>-->
-
-<!--    <div class="p-field">-->
-<!--      <span class="p-float-label">-->
-<!--        <input #email="ngModel" id="email" type="text" required pInputText pKeyFilter="email"-->
-<!--               [(ngModel)]="personalData.email"-->
-<!--               [ngClass]="{'ng-dirty': (email.invalid && isSubmitted) || (email.dirty && email.invalid)}">-->
-<!--        <label for="email">E-Mail</label>-->
-<!--        <small *ngIf="(email.invalid && isSubmitted) || (email.dirty && email.invalid)" class="p-error">E-Mail ist verpflichtend</small>-->
-<!--        &lt;!&ndash;        <small *ngIf="email.dirty && email.invalid" class="p-error">E-Mail ist nicht valide.</small>&ndash;&gt;-->
-<!--        &lt;!&ndash;          <p-message severity="error" text="Not a valid email" [@errorState]="email.dirty ? 'visible' : 'hidden'"></p-message>&ndash;&gt;-->
-<!--      </span>-->
-<!--    </div>-->
-
-<!--    <div class="p-field">-->
-<!--      <span class="p-float-label">-->
-<!--        <textarea #comment="ngModel" id="comment" pInputTextarea-->
-<!--                  [(ngModel)]="personalData.comment"-->
-<!--                  [ngClass]="{'ng-dirty': (comment.invalid && isSubmitted) || (comment.dirty && comment.invalid)}"-->
-<!--                  [autoResize]="true" rows="5"-->
-<!--                  cols="30"></textarea>-->
-<!--        <label for="comment">Anmerkungen</label>-->
-<!--      </span>-->
-<!--    </div>-->
-<!--  </div>-->
-
-<!--  <div class="grid p-nogutter p-justify-end">-->
-<!--    <button pButton pRipple type="button" label="Weiter" icon="pi pi-angle-right" iconPos="right"-->
-<!--            class="p-button-rounded" (click)="nextPage()"></button>-->
-<!--  </div>-->
-<!--</p-card>-->
