--- a/apps/flolo-page-ui/src/app/pages/camps/drei-seen-tour/drei-seen-tour.component.html
+++ b/apps/flolo-page-ui/src/app/pages/camps/drei-seen-tour/drei-seen-tour.component.html
@@ -1,7 +1,7 @@
 <div class="grid grid-nogutter surface-section text-800">
   <div class="col-12 md:col-6 p-6 text-center md:text-left flex align-items-center">
     <section>
-      <span class="block text-6xl font-bold mb-1">3 Seen, 3 Camps</span>
+      <span class="block text-6xl font-bold mb-1">3 Seen, 3 Events</span>
       <div class="text-6xl text-primary font-bold mb-3">Beachvolleyball an den schönsten Seen Österreichs</div>
       <p class="mt-0 mb-4 text-700 line-height-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 
@@ -104,170 +104,77 @@
 </div>
 
 
-<div class="bg-gray-100 px-4 py-8 md:px-6 lg:px-8">
-  <div class="text-center font-bold text-900 text-5xl mb-3">Das Trainerteam</div>
-  <div class="text-center text-xl line-height-3 text-600 mb-6">
-    Unser Trainerteam besteht aus aktiven Profis auf nationaler und internationaler Bühne.
-  </div>
+<!--<div class="bg-gray-100 px-4 py-8 md:px-6 lg:px-8">-->
+<!--  <div class="text-center font-bold text-900 text-5xl mb-3">Das Trainerteam</div>-->
+<!--  <div class="text-center text-xl line-height-3 text-600 mb-6">-->
+<!--    Unser Trainerteam besteht aus aktiven Profis auf nationaler und internationaler Bühne.-->
+<!--  </div>-->
 
-  <div class="grid justify-content-center">
+<!--  <div class="grid justify-content-center">-->
 
-    <div class="col-12 md:col-3 text-center mt-5 mb-5 lg:mb-0 mr-0 lg:mr-5 shadow-2 surface-card">
-      <img class="mb-3" src="assets/social/Lo_small.png">
-      <div class="text-xl text-900 font-medium mb-3">Lorenz Petutschnig</div>
-      <div class="inline-flex align-items-center">
-        <a class="mr-3 text-600 cursor-pointer">
-          <i class="pi pi-twitter text-xl"></i>
-        </a>
-        <a class="mr-3 text-600 cursor-pointer">
-          <i class="pi pi-github text-xl"></i>
-        </a>
-        <a class="text-600 cursor-pointer">
-          <i class="pi pi-facebook text-xl"></i>
-        </a>
-      </div>
-    </div>
-
-    <div class="col-12 md:col-3 text-center mt-5 mb-5 lg:mb-0 mr-0 lg:mr-5 shadow-2 surface-card">
-      <img class="mb-3" src="assets/social/Flo_small.png">
-      <div class="text-xl text-900 font-medium mb-3">Florian Schnetzer</div>
-      <div class="inline-flex align-items-center">
-        <a class="mr-3 text-600 cursor-pointer">
-          <i class="pi pi-twitter text-xl"></i>
-        </a>
-        <a class="mr-3 text-600 cursor-pointer">
-          <i class="pi pi-github text-xl"></i>
-        </a>
-        <a class="text-600 cursor-pointer">
-          <i class="pi pi-facebook text-xl"></i>
-        </a>
-      </div>
-    </div>
-
-    <div class="col-12 md:col-3 text-center mt-5 mb-5 lg:mb-0 mr-0 lg:mr-5 shadow-2 surface-card">
-      <img class="mb-3" src="assets/social/Kathi_small.png">
-      <div class="text-xl text-900 font-medium mb-3">Katharina Schützenhöfer</div>
-      <div class="inline-flex align-items-center">
-        <a class="mr-3 text-600 cursor-pointer">
-          <i class="pi pi-twitter text-xl"></i>
-        </a>
-        <a class="mr-3 text-600 cursor-pointer">
-          <i class="pi pi-github text-xl"></i>
-        </a>
-        <a class="text-600 cursor-pointer">
-          <i class="pi pi-facebook text-xl"></i>
-        </a>
-      </div>
-    </div>
-
-    <div class="col-12 md:col-3 text-center mt-5 mb-5 lg:mb-0 mr-0 lg:mr-5 shadow-2 surface-card">
-      <img class="mb-3" src="assets/social/Lena_small.png">
-      <div class="text-xl text-900 font-medium mb-3">Lena Plesiutschnig</div>
-      <div class="inline-flex align-items-center">
-        <a class="mr-3 text-600 cursor-pointer">
-          <i class="pi pi-twitter text-xl"></i>
-        </a>
-        <a class="mr-3 text-600 cursor-pointer">
-          <i class="pi pi-github text-xl"></i>
-        </a>
-        <a class="text-600 cursor-pointer">
-          <i class="pi pi-facebook text-xl"></i>
-        </a>
-      </div>
-    </div>
-  </div>
-
-<!--  <div class="flex justify-content-center flex-column lg:flex-row">-->
-<!--    <div class="grid justify-content-center">-->
-
-<!--      <div class="col-12 md:col-6 xl:col-4 shadow-2 p-4 mt-5 mb-5 lg:mb-0 mr-0 lg:mr-5 surface-card">-->
-<!--        <img class="mb-3 w-full" src="assets/social/Lo.jpg">-->
-<!--        <div class="flex justify-content-between align-items-center">-->
-<!--          <div class="pr-3">-->
-<!--            <div class="text-xl text-900 font-medium mb-2">Lorenz Petutschnig</div>-->
-<!--            &lt;!&ndash;          <div class="text-blue-600">Software Developer</div>&ndash;&gt;-->
-<!--          </div>-->
-<!--          <div class="flex flex-nowrap">-->
-<!--            <button class="p-button-rounded p-button-text p-button-outlined p-button-plain mr-2 p-button p-component p-button-icon-only"-->
-<!--                    icon="pi pi-twitter" pbutton="" pripple="">-->
-<!--              <span class="p-button-icon pi pi-twitter" aria-hidden="true"></span>-->
-<!--              <span aria-hidden="true" class="p-button-label">&nbsp;</span>-->
-<!--            </button>-->
-<!--            <button class="p-button-rounded p-button-text p-button-outlined p-button-plain p-button p-component p-button-icon-only"-->
-<!--                    icon="pi pi-github" pbutton="" pripple="">-->
-<!--              <span class="p-button-icon pi pi-github" aria-hidden="true"></span>-->
-<!--              <span aria-hidden="true" class="p-button-label">&nbsp;</span>-->
-<!--            </button>-->
-<!--          </div>-->
-<!--        </div>-->
-<!--      </div>-->
-
-<!--      <div class="col-12 md:col-6 xl:col-4 shadow-2 p-4 mt-5 mb-5 lg:mb-0 mr-0 lg:mr-5 surface-card">-->
-<!--        <img class="mb-3 w-full" src="assets/social/Flo.jpg">-->
-<!--        <div class="flex justify-content-between align-items-center">-->
-<!--          <div class="pr-3">-->
-<!--            <div class="text-xl text-900 font-medium mb-2">Florian Schnetzer</div>-->
-<!--            &lt;!&ndash;          <div class="text-blue-600">Software Developer</div>&ndash;&gt;-->
-<!--          </div>-->
-<!--          <div class="flex flex-nowrap">-->
-<!--            <button class="p-button-rounded p-button-text p-button-outlined p-button-plain mr-2 p-button p-component p-button-icon-only"-->
-<!--                    icon="pi pi-twitter" pbutton="" pripple="">-->
-<!--              <span class="p-button-icon pi pi-twitter" aria-hidden="true"></span>-->
-<!--              <span aria-hidden="true" class="p-button-label">&nbsp;</span>-->
-<!--            </button>-->
-<!--            <button class="p-button-rounded p-button-text p-button-outlined p-button-plain p-button p-component p-button-icon-only"-->
-<!--                    icon="pi pi-github" pbutton="" pripple="">-->
-<!--              <span class="p-button-icon pi pi-github" aria-hidden="true"></span>-->
-<!--              <span aria-hidden="true" class="p-button-label">&nbsp;</span>-->
-<!--            </button>-->
-<!--          </div>-->
-<!--        </div>-->
-<!--      </div>-->
-
-<!--      <div class="col-12 md:col-6 xl:col-4 shadow-2 p-4 mt-5 mb-5 lg:mb-0 mr-0 lg:mr-5 surface-card">-->
-<!--        <img class="mb-3 w-full" src="assets/social/Kathi.jpg">-->
-<!--        <div class="flex justify-content-between align-items-center">-->
-<!--          <div class="pr-3">-->
-<!--            <div class="text-xl text-900 font-medium mb-2">Katharina Schützenhöfer</div>-->
-<!--            &lt;!&ndash;          <div class="text-blue-600">Software Developer</div>&ndash;&gt;-->
-<!--          </div>-->
-<!--          <div class="flex flex-nowrap">-->
-<!--            <button class="p-button-rounded p-button-text p-button-outlined p-button-plain mr-2 p-button p-component p-button-icon-only"-->
-<!--                    icon="pi pi-twitter" pbutton="" pripple="">-->
-<!--              <span class="p-button-icon pi pi-twitter" aria-hidden="true"></span>-->
-<!--              <span aria-hidden="true" class="p-button-label">&nbsp;</span>-->
-<!--            </button>-->
-<!--            <button class="p-button-rounded p-button-text p-button-outlined p-button-plain p-button p-component p-button-icon-only"-->
-<!--                    icon="pi pi-github" pbutton="" pripple="">-->
-<!--              <span class="p-button-icon pi pi-github" aria-hidden="true"></span>-->
-<!--              <span aria-hidden="true" class="p-button-label">&nbsp;</span>-->
-<!--            </button>-->
-<!--          </div>-->
-<!--        </div>-->
-<!--      </div>-->
-
-<!--      <div class="col-12 md:col-6 xl:col-4 shadow-2 p-4 mt-5 mb-5 lg:mb-0 mr-0 lg:mr-5 surface-card">-->
-<!--        <img class="mb-3 w-full" src="assets/social/Lena.jpg">-->
-<!--        <div class="flex justify-content-between align-items-center">-->
-<!--          <div class="pr-3">-->
-<!--            <div class="text-xl text-900 font-medium mb-2">Lena Plesiutschnig</div>-->
-<!--            &lt;!&ndash;          <div class="text-blue-600">Software Developer</div>&ndash;&gt;-->
-<!--          </div>-->
-<!--          <div class="flex flex-nowrap">-->
-<!--            <button class="p-button-rounded p-button-text p-button-outlined p-button-plain mr-2 p-button p-component p-button-icon-only"-->
-<!--                    icon="pi pi-twitter" pbutton="" pripple="">-->
-<!--              <span class="p-button-icon pi pi-twitter" aria-hidden="true"></span>-->
-<!--              <span aria-hidden="true" class="p-button-label">&nbsp;</span>-->
-<!--            </button>-->
-<!--            <button class="p-button-rounded p-button-text p-button-outlined p-button-plain p-button p-component p-button-icon-only"-->
-<!--                    icon="pi pi-github" pbutton="" pripple="">-->
-<!--              <span class="p-button-icon pi pi-github" aria-hidden="true"></span>-->
-<!--              <span aria-hidden="true" class="p-button-label">&nbsp;</span>-->
-<!--            </button>-->
-<!--          </div>-->
-<!--        </div>-->
+<!--    <div class="col-12 md:col-3 text-center mt-5 mb-5 lg:mb-0 mr-0 lg:mr-5 shadow-2 surface-card">-->
+<!--      <img class="mb-3" src="assets/social/Lo_small.png">-->
+<!--      <div class="text-xl text-900 font-medium mb-3">Lorenz Petutschnig</div>-->
+<!--      <div class="inline-flex align-items-center">-->
+<!--        <a class="mr-3 text-600 cursor-pointer">-->
+<!--          <i class="pi pi-twitter text-xl"></i>-->
+<!--        </a>-->
+<!--        <a class="mr-3 text-600 cursor-pointer">-->
+<!--          <i class="pi pi-github text-xl"></i>-->
+<!--        </a>-->
+<!--        <a class="text-600 cursor-pointer">-->
+<!--          <i class="pi pi-facebook text-xl"></i>-->
+<!--        </a>-->
 <!--      </div>-->
 <!--    </div>-->
 
+<!--    <div class="col-12 md:col-3 text-center mt-5 mb-5 lg:mb-0 mr-0 lg:mr-5 shadow-2 surface-card">-->
+<!--      <img class="mb-3" src="assets/social/Flo_small.png">-->
+<!--      <div class="text-xl text-900 font-medium mb-3">Florian Schnetzer</div>-->
+<!--      <div class="inline-flex align-items-center">-->
+<!--        <a class="mr-3 text-600 cursor-pointer">-->
+<!--          <i class="pi pi-twitter text-xl"></i>-->
+<!--        </a>-->
+<!--        <a class="mr-3 text-600 cursor-pointer">-->
+<!--          <i class="pi pi-github text-xl"></i>-->
+<!--        </a>-->
+<!--        <a class="text-600 cursor-pointer">-->
+<!--          <i class="pi pi-facebook text-xl"></i>-->
+<!--        </a>-->
+<!--      </div>-->
+<!--    </div>-->
+
+<!--    <div class="col-12 md:col-3 text-center mt-5 mb-5 lg:mb-0 mr-0 lg:mr-5 shadow-2 surface-card">-->
+<!--      <img class="mb-3" src="assets/social/Kathi_small.png">-->
+<!--      <div class="text-xl text-900 font-medium mb-3">Katharina Schützenhöfer</div>-->
+<!--      <div class="inline-flex align-items-center">-->
+<!--        <a class="mr-3 text-600 cursor-pointer">-->
+<!--          <i class="pi pi-twitter text-xl"></i>-->
+<!--        </a>-->
+<!--        <a class="mr-3 text-600 cursor-pointer">-->
+<!--          <i class="pi pi-github text-xl"></i>-->
+<!--        </a>-->
+<!--        <a class="text-600 cursor-pointer">-->
+<!--          <i class="pi pi-facebook text-xl"></i>-->
+<!--        </a>-->
+<!--      </div>-->
+<!--    </div>-->
+
+<!--    <div class="col-12 md:col-3 text-center mt-5 mb-5 lg:mb-0 mr-0 lg:mr-5 shadow-2 surface-card">-->
+<!--      <img class="mb-3" src="assets/social/Lena_small.png">-->
+<!--      <div class="text-xl text-900 font-medium mb-3">Lena Plesiutschnig</div>-->
+<!--      <div class="inline-flex align-items-center">-->
+<!--        <a class="mr-3 text-600 cursor-pointer">-->
+<!--          <i class="pi pi-twitter text-xl"></i>-->
+<!--        </a>-->
+<!--        <a class="mr-3 text-600 cursor-pointer">-->
+<!--          <i class="pi pi-github text-xl"></i>-->
+<!--        </a>-->
+<!--        <a class="text-600 cursor-pointer">-->
+<!--          <i class="pi pi-facebook text-xl"></i>-->
+<!--        </a>-->
+<!--      </div>-->
+<!--    </div>-->
 <!--  </div>-->
-</div>
+
+<!--</div>-->
