--- a/apps/flolo-page-ui/src/app/pages/general/beachteam/beachteam.component.html
+++ b/apps/flolo-page-ui/src/app/pages/general/beachteam/beachteam.component.html
@@ -32,7 +32,7 @@
         <div class="flex justify-content-between align-items-center">
           <div class="pr-3">
             <div class="text-xl text-900 font-medium mb-2">Lorenz Petutschnig</div>
-            <div class="text-blue-600">Blocker</div>
+            <div class="text-blue-600">Blockspieler</div>
           </div>
           <div class="flex flex-nowrap">
             <button class="p-button-rounded p-button-text p-button-outlined p-button-plain mr-2 p-button p-component p-button-icon-only"
@@ -54,7 +54,7 @@
         <div class="flex justify-content-between align-items-center">
           <div class="pr-3">
             <div class="text-xl text-900 font-medium mb-2">Florian Schnetzer</div>
-            <div class="text-blue-600">Verteidiger</div>
+            <div class="text-blue-600">Verteidigungsspieler</div>
           </div>
           <div class="flex flex-nowrap">
             <button class="p-button-rounded p-button-text p-button-outlined p-button-plain mr-2 p-button p-component p-button-icon-only"
@@ -80,80 +80,80 @@
   <img alt="Image" class="block mx-auto w-full" src="assets/social/FloLo.jpg">
 </div>
 
-<div class="bg-gray-100 px-0 py-4 md:py-6 md:px-6 lg:py-8 lg:px-8">
-  <div class="bg-gray-100 text-center font-bold text-900 text-5xl mb-1">Unsere Erfolge 2021</div>
-  <!--  <div class="text-center text-xl line-height-3 text-600 mb-6">-->
-  <!--    Das Team bla bla-->
-  <!--  </div>-->
+<!--<div class="bg-gray-100 px-0 py-4 md:py-6 md:px-6 lg:py-8 lg:px-8">-->
+<!--  <div class="bg-gray-100 text-center font-bold text-900 text-5xl mb-1">Unsere Erfolge 2021</div>-->
+<!--  &lt;!&ndash;  <div class="text-center text-xl line-height-3 text-600 mb-6">&ndash;&gt;-->
+<!--  &lt;!&ndash;    Das Team bla bla&ndash;&gt;-->
+<!--  &lt;!&ndash;  </div>&ndash;&gt;-->
 
-  <div class="bg-gray-100 px-0 py-2 md:px-6 lg:px-8 ng-star-inserted">
-    <div class="grid grid-nogutter">
+<!--  <div class="bg-gray-100 px-0 py-2 md:px-6 lg:px-8 ng-star-inserted">-->
+<!--    <div class="grid grid-nogutter">-->
 
-      <div class="col-12 md:col-6 xl:col-4 p-3">
-        <div class="bg-white surface-card shadow-2 border-rounded p-3">
-          <div class="flex border-bottom-1 surface-border pb-3">
-            <img class="mr-3" src="assets/other/medal_3.png" style="width: 70px; height: 70px">
-            <div class="flex flex-column justify-content-between">
-              <span class="text-lg text-900 font-medium">Staatsmeisterschaften</span>
-              <span class="text-600 font-medium">Litzlberg (AT)</span>
-            </div>
-          </div>
-        </div>
-      </div>
+<!--      <div class="col-12 md:col-6 xl:col-4 p-3">-->
+<!--        <div class="bg-white surface-card shadow-2 border-rounded p-3">-->
+<!--          <div class="flex border-bottom-1 surface-border pb-3">-->
+<!--            <img class="mr-3" src="assets/other/medal_3.png" style="width: 70px; height: 70px">-->
+<!--            <div class="flex flex-column justify-content-between">-->
+<!--              <span class="text-lg text-900 font-medium">Staatsmeisterschaften</span>-->
+<!--              <span class="text-600 font-medium">Litzlberg (AT)</span>-->
+<!--            </div>-->
+<!--          </div>-->
+<!--        </div>-->
+<!--      </div>-->
 
-      <div class="col-12 md:col-6 xl:col-4 p-3">
-        <div class="bg-white surface-card shadow-2 border-rounded p-3">
-          <div class="flex border-bottom-1 surface-border pb-3">
-            <img class="mr-3" src="assets/other/medal_5.png" style="width: 70px; height: 70px">
-            <div class="flex flex-column justify-content-between">
-              <span class="text-lg text-900 font-medium">World Tour 1*</span>
-              <span class="text-600 font-medium">Sofia (BG)</span>
-            </div>
-          </div>
-        </div>
-      </div>
+<!--      <div class="col-12 md:col-6 xl:col-4 p-3">-->
+<!--        <div class="bg-white surface-card shadow-2 border-rounded p-3">-->
+<!--          <div class="flex border-bottom-1 surface-border pb-3">-->
+<!--            <img class="mr-3" src="assets/other/medal_5.png" style="width: 70px; height: 70px">-->
+<!--            <div class="flex flex-column justify-content-between">-->
+<!--              <span class="text-lg text-900 font-medium">World Tour 1*</span>-->
+<!--              <span class="text-600 font-medium">Sofia (BG)</span>-->
+<!--            </div>-->
+<!--          </div>-->
+<!--        </div>-->
+<!--      </div>-->
 
-      <div class="col-12 md:col-6 xl:col-4 p-3">
-        <div class="bg-white surface-card shadow-2 border-rounded p-3">
-          <div class="flex border-bottom-1 surface-border pb-3">
-            <img class="mr-3" src="assets/other/medal_5.png" style="width: 70px; height: 70px">
-            <div class="flex flex-column justify-content-between">
-              <span class="text-lg text-900 font-medium">Pro 160</span>
-              <span class="text-600 font-medium">Wolfurt (AT)</span>
-            </div>
-          </div>
-        </div>
-      </div>
+<!--      <div class="col-12 md:col-6 xl:col-4 p-3">-->
+<!--        <div class="bg-white surface-card shadow-2 border-rounded p-3">-->
+<!--          <div class="flex border-bottom-1 surface-border pb-3">-->
+<!--            <img class="mr-3" src="assets/other/medal_5.png" style="width: 70px; height: 70px">-->
+<!--            <div class="flex flex-column justify-content-between">-->
+<!--              <span class="text-lg text-900 font-medium">Pro 160</span>-->
+<!--              <span class="text-600 font-medium">Wolfurt (AT)</span>-->
+<!--            </div>-->
+<!--          </div>-->
+<!--        </div>-->
+<!--      </div>-->
 
-      <div class="col-12 md:col-6 xl:col-4 p-3">
-        <div class="bg-white surface-card shadow-2 border-rounded p-3">
-          <div class="flex border-bottom-1 surface-border pb-3">
-            <img class="mr-3" src="assets/other/medal_5.png" style="width: 70px; height: 70px">
-            <div class="flex flex-column justify-content-between">
-              <span class="text-lg text-900 font-medium">Pro 160</span>
-              <span class="text-600 font-medium">Vienna (AT)</span>
-            </div>
-          </div>
-        </div>
-      </div>
+<!--      <div class="col-12 md:col-6 xl:col-4 p-3">-->
+<!--        <div class="bg-white surface-card shadow-2 border-rounded p-3">-->
+<!--          <div class="flex border-bottom-1 surface-border pb-3">-->
+<!--            <img class="mr-3" src="assets/other/medal_5.png" style="width: 70px; height: 70px">-->
+<!--            <div class="flex flex-column justify-content-between">-->
+<!--              <span class="text-lg text-900 font-medium">Pro 160</span>-->
+<!--              <span class="text-600 font-medium">Vienna (AT)</span>-->
+<!--            </div>-->
+<!--          </div>-->
+<!--        </div>-->
+<!--      </div>-->
 
-      <div class="col-12 md:col-6 xl:col-4 p-3">
-        <div class="bg-white surface-card shadow-2 border-rounded p-3">
-          <div class="flex border-bottom-1 surface-border pb-3">
-            <img class="mr-3" src="assets/other/medal_9.png" style="width: 70px; height: 70px">
-            <div class="flex flex-column justify-content-between">
-              <span class="text-lg text-900 font-medium">World Tour 1*</span>
-              <span class="text-600 font-medium">Apeldoorn (NL)</span>
-            </div>
-          </div>
-        </div>
-      </div>
+<!--      <div class="col-12 md:col-6 xl:col-4 p-3">-->
+<!--        <div class="bg-white surface-card shadow-2 border-rounded p-3">-->
+<!--          <div class="flex border-bottom-1 surface-border pb-3">-->
+<!--            <img class="mr-3" src="assets/other/medal_9.png" style="width: 70px; height: 70px">-->
+<!--            <div class="flex flex-column justify-content-between">-->
+<!--              <span class="text-lg text-900 font-medium">World Tour 1*</span>-->
+<!--              <span class="text-600 font-medium">Apeldoorn (NL)</span>-->
+<!--            </div>-->
+<!--          </div>-->
+<!--        </div>-->
+<!--      </div>-->
 
-    </div>
-  </div>
-</div>
+<!--    </div>-->
+<!--  </div>-->
+<!--</div>-->
 
-<div class="surface-section px-4 py-8 md:px-6 lg:px-8 ng-star-inserted">
+<div class="surface-section px-4 pt-4 pb-4 md:px-6 lg:px-8 ng-star-inserted">
   <div class="surface-section">
     <div class="text-900 mb-3 font-bold text-5xl text-center">Trusted By</div>
     <div class="text-600 mb-6 line-height-3 text-xl text-center">
