employee as model and stuff

--- a/libs/services-statistics/src/lib/components/services-statistics-activity-table/services-statistics-activity-table.component.html
+++ b/libs/services-statistics/src/lib/components/services-statistics-activity-table/services-statistics-activity-table.component.html
@@ -15,7 +15,7 @@
   </ng-template>
   <ng-template pTemplate="body" let-activity>
     <tr>
-      <td>{{activity.id}}</td>
+      <td>{{activity.externalId}}</td>
       <td>{{activity.date | date: 'E dd/MM/yyyy'}}</td>
       <td>{{activity.durationHrs}}</td>
       <td>
