--- a/apps/services-eval-ui/src/app/pages/services-check/services-check.component.html
+++ b/apps/services-eval-ui/src/app/pages/services-check/services-check.component.html
@@ -22,7 +22,7 @@
             <td>
               <button type="button" pButton pRipple [pRowToggler]="statistic" class="p-button-text p-button-rounded p-button-plain" [icon]="expanded ? 'pi pi-chevron-down' : 'pi pi-chevron-right'"></button>
             </td>
-            <td>{{statistic.employee}}</td>
+            <td>{{statistic.employee.getFullName()}}</td>
             <td>{{statistic.anomalies.length}}</td>
           </tr>
         </ng-template>
