--- a/libs/services-statistics/src/lib/components/services-activity-details/services-activity-details.component.html
+++ b/libs/services-statistics/src/lib/components/services-activity-details/services-activity-details.component.html
@@ -1,10 +1,10 @@
 
 <div class="surface-card p-4 shadow-2 border-round">
-  <div class="text-500 mb-5">Activity ID: {{activity.id}}</div>
+  <div class="text-500 mb-5">Activity ID: {{activity.externalId}}</div>
   <ul class="list-none p-0 m-0 border-top-1 surface-border">
     <li class="flex align-items-center py-3 px-2 flex-wrap surface-ground">
       <div class="text-500 w-full md:w-2 font-medium">Employee</div>
-      <div class="text-900 w-full md:w-10">{{activity.employee}}</div>
+      <div class="text-900 w-full md:w-10">{{activity.employee.firstName}} {{activity.employee.lastName}}</div>
     </li>
     <li class="flex align-items-center py-3 px-2 flex-wrap">
       <div class="text-500 w-full md:w-2 font-medium">Date</div>
