--- a/libs/services-statistics/src/lib/components/services-statistics-table/services-statistics-table.component.html
+++ b/libs/services-statistics/src/lib/components/services-statistics-table/services-statistics-table.component.html
@@ -1,7 +1,7 @@
 
 <p-table id="statistics-table" [value]="servicesStatistics"
          styleClass="p-datatable-striped" sortField="employee"
-         dataKey="employee" responsiveLayout="scroll">
+         dataKey="employee.id" responsiveLayout="scroll">
   <ng-template pTemplate="header">
     <tr>
       <th style="width: 3rem"></th>
@@ -23,7 +23,7 @@
       <td>
         <button type="button" pButton pRipple [pRowToggler]="statistic" class="p-button-text p-button-rounded p-button-plain" [icon]="expanded ? 'pi pi-chevron-down' : 'pi pi-chevron-right'"></button>
       </td>
-      <td>{{statistic.employee}}</td>
+      <td>{{statistic.employee.firstName}} {{statistic.employee.lastName}}</td>
       <td>{{statistic.total}}</td>
       <td>{{statistic.billable}}</td>
       <td>{{statistic.support}}</td>
